--- a/public/verify.html
+++ b/public/verify.html
@@ -50,10 +50,12 @@
   </form>
   <div id="result">
     <div class="notary-header">
-      <h1>ROHAN T. GAIKWAD</h1>
-      <p>Advocate & Notary Public, Government of India</p>
-      <p>NJ House, Cabin No-NP1, Opp Kalyan Court Gate No.2, Kalyan (W), Pin Code 421301</p>
-      <p>Email: info@gaikwadslegal.com | Phone: 9356712199 / 9967526951</p>
+      <h1>ARCHANA PANDEY</h1>
+      <p>Notary Public, Government of India</p>
+      <p> N.J House, Cabin no.B Hiralal Chotelal compound,
+Kalyan court ,Bhaji Market,Old Station Road,
+Kalyan (West) Dist.Thane (Maharashta)- 421301</p>
+      <p>Email: pandavarchana77@gmail.com | Phone: +91 9220574357</p>
     </div>
     <div class="meta-info">
       <div><strong>Serial Number:</strong> <span id="z_srno"></span></div>
@@ -128,3 +130,4 @@
   </script>
 </body>
 </html>
+
