--- a/public/verify.html
+++ b/public/verify.html
@@ -6,35 +6,36 @@
   <title>Verify & Print Sale Deed - PRTU</title>
   <!--
     verify.html
-    - Verify by Notary Sr. No. & Document Number
-    - Displays full sale deed in official horizontal format
-    - Includes Notary header, metadata, executing parties table, content sections, and print signature boxes
-    - Print CSS hides inputs and shows only deed layout
+    - Lookup by Notary Sr. No. & Document Number
+    - Renders sale deed in official horizontal format
+    - Notary header, metadata, executing parties, contents, schedule, consideration
+    - Print CSS hides form and button
   -->
   <style>
     body { font-family: Arial, sans-serif; background: #f3f6f8; margin: 0; padding: 20px; }
     h2 { text-align: center; color: #003366; margin-bottom: 20px; }
-    .flash-msg { display: none; max-width: 400px; margin: 0 auto 20px; padding: 10px; background: #ffe5e5; color: #cc0000; border:1px solid #cc0000; border-radius:5px; text-align:center; font-weight:bold; }
+    .flash-msg { display: none; max-width: 500px; margin: 0 auto 20px; padding: 10px; background: #ffe5e5; color: #cc0000; border:1px solid #cc0000; border-radius:5px; text-align:center; font-weight:bold; }
     form { max-width: 400px; margin: 0 auto 30px; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
     label { display: block; margin-top: 10px; font-weight: bold; }
     input { width: 100%; padding: 8px; margin-top: 5px; border: 1px solid #ccc; border-radius: 4px; font-size: 14px; }
     button { margin-top: 15px; padding: 10px; background: #003366; color: #fff; border: none; width: 100%; border-radius: 4px; font-size: 15px; cursor: pointer; }
-    #result { display: none; max-width: 960px; margin: 0 auto; background: #fff; padding: 20px; border: 1px solid #ccc; border-radius: 8px; }
+    #result { display: none; max-width: 960px; margin: 0 auto; background: #fff; padding: 20px; border: 1px solid #000; border-radius: 6px; }
     .notary-header { text-align: center; margin-bottom: 20px; }
     .notary-header h1 { margin: 0; font-size: 24px; }
     .notary-header p { margin: 4px 0; font-size: 14px; }
     .meta-info { margin-bottom: 20px; font-size: 14px; }
     .meta-info div { margin: 4px 0; }
     .exec-table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
-    .exec-table th, .exec-table td { border: 1px solid #000; padding: 8px; vertical-align: top; }
-    .exec-table th { background: #e0e0e0; }
-    .sig-box { width: 100%; height: 100px; border-bottom: 1px solid #000; }
+    .exec-table th, .exec-table td { border: 1px solid #000; padding: 8px; vertical-align: top; font-size: 14px; }
+    .exec-table th { background: #e0e0e0; text-align: left; }
+    .sig-box { width: 100%; height: 80px; border-bottom: 1px solid #000; }
     .contents, .schedule, .consideration { border: 1px solid #000; padding: 8px; font-size: 14px; margin-bottom: 10px; }
+    .contents strong, .schedule strong, .consideration strong { display: block; margin-bottom: 4px; }
     #printBtn { background: green; color: #fff; font-weight: bold; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; display: block; margin: 20px auto; }
     @media print {
       form, #printBtn, .flash-msg { display: none !important; }
-      #result { border: none; box-shadow: none; margin: 0; padding: 0; }
       body { background: #fff; padding: 0; }
+      #result { border: none; box-shadow: none; margin: 0; padding: 0; }
     }
   </style>
 </head>
@@ -48,83 +49,124 @@
     <input type="text" id="docNumber" required />
     <button type="submit">Verify</button>
   </form>
+
   <div id="result">
+    <!-- Notary Header -->
     <div class="notary-header">
-      <h1>ROHAN T. GAIKWAD</h1>
-      <p>Advocate & Notary Public, Government of India</p>
-      <p>NJ House, Cabin No-NP1, Opp Kalyan Court Gate No.2, Kalyan (W), Pin Code 421301</p>
-      <p>Email: info@gaikwadslegal.com | Phone: 9356712199 / 9967526951</p>
+      <h1>ARCHANA PANDEY</h1>
+      <p>Notary Public, Government of India</p>
+      <p>N.J House, Cabin no.B Hiralal Chotelal compound, Bhaji Market, Old Station Road, Kalyan (West), Thane – 421301</p>
+      <p>Email: pandavarchana77@gmail.com | Phone: +91 9220574357</p>
     </div>
+
+    <!-- Document Metadata -->
     <div class="meta-info">
       <div><strong>Serial Number:</strong> <span id="z_srno"></span></div>
       <div><strong>Document Number:</strong> <span id="z_docno"></span></div>
       <div><strong>Type of Document:</strong> <span id="z_docType"></span></div>
     </div>
+
+    <!-- Executing Parties -->
     <table class="exec-table">
       <thead>
         <tr>
-          <th>PARTY</th><th>Digital Photo</th><th>Thumb Impression</th><th>Signature</th>
+          <th style="width:35%">PARTY</th>
+          <th style="width:20%">Digital Photo</th>
+          <th style="width:20%">Thumb Impression</th>
+          <th style="width:25%">Signature</th>
         </tr>
       </thead>
       <tbody>
+        <!-- Purchaser -->
         <tr>
           <td id="z_purchaser"></td>
-          <td><img id="z_photoP" width="80"></td>
-          <td><img id="z_thumbP" width="80"></td>
+          <td><img id="z_photoP" width="100" alt="Photo"></td>
+          <td><img id="z_thumbP" width="100" alt="Thumb"></td>
           <td><div class="sig-box"></div></td>
         </tr>
+        <!-- Seller -->
         <tr>
           <td id="z_seller"></td>
-          <td><img id="z_photoS" width="80"></td>
-          <td><img id="z_thumbS" width="80"></td>
+          <td><img id="z_photoS" width="100" alt="Photo"></td>
+          <td><img id="z_thumbS" width="100" alt="Thumb"></td>
           <td><div class="sig-box"></div></td>
         </tr>
+        <!-- Witness -->
         <tr>
           <td id="z_witness"></td>
-          <td><img id="z_photoW" width="80"></td>
-          <td><img id="z_thumbW" width="80"></td>
+          <td><img id="z_photoW" width="100" alt="Photo"></td>
+          <td><img id="z_thumbW" width="100" alt="Thumb"></td>
           <td><div class="sig-box"></div></td>
         </tr>
       </tbody>
     </table>
+
+    <!-- Contents and Schedule -->
     <div class="contents"><strong>CONTENTS OF THE DOCUMENT MENTIONED THEREIN:</strong> <span id="z_contents"></span></div>
     <div class="schedule"><strong>SCHEDULE OF PROPERTY:</strong> <span id="z_schedule"></span></div>
     <div class="consideration"><strong>CONSIDERATION OF PROPERTY:</strong> <span id="z_consideration"></span></div>
+
     <button id="printBtn" onclick="printRecord()">Print / Download</button>
   </div>
+
   <script>
     async function verifyRecord(e) {
       e.preventDefault();
-      const sr=document.getElementById('notarySrNo').value.trim();
-      const dn=document.getElementById('docNumber').value.trim();
-      document.getElementById('flashMessage').style.display='none';
-      document.getElementById('result').style.display='none';
+      const sr = document.getElementById('notarySrNo').value.trim();
+      const dn = document.getElementById('docNumber').value.trim();
+      const flash = document.getElementById('flashMessage');
+      const result = document.getElementById('result');
+      flash.style.display = result.style.display = 'none';
       try {
-        const recs=await (await fetch('/get-users')).json();
-        const r=recs.find(u=>u.metaNotarySrNo===sr&&u.metaDocumentNumber===dn);
-        if(!r){ document.getElementById('flashMessage').style.display='block'; return; }
-        // Populate header data
-        document.getElementById('z_srno').innerText=r.metaNotarySrNo;
-        document.getElementById('z_docno').innerText=r.metaDocumentNumber;
-        document.getElementById('z_docType').innerText=r.metaDocumentType;
-        // Format party block
-        const fmt=(fields)=>fields.map(f=>`<div>${r[f]||''}</div>`).join('');
-        document.getElementById('z_purchaser').innerHTML=fmt(['purchaserName','purchaserAge','purchaserOccupation','purchaserAddress','purchaserContact','purchaserIdNumber']);
-        document.getElementById('z_photoP').src=r.photoP||'';
-        document.getElementById('z_thumbP').src=r.thumbP||'';
-        document.getElementById('z_seller').innerHTML=fmt(['sellerName','sellerAge','sellerOccupation','sellerAddress','sellerContact','sellerIdNumber']);
-        document.getElementById('z_photoS').src=r.photoS||'';
-        document.getElementById('z_thumbS').src=r.thumbS||'';
-        document.getElementById('z_witness').innerHTML=fmt(['witnessName','witnessAge','witnessOccupation','witnessAddress','witnessContact','witnessIdNumber']);
-        document.getElementById('z_photoW').src=r.photoW||'';
-        document.getElementById('z_thumbW').src=r.thumbW||'';
-        document.getElementById('z_contents').innerText=r.metaDocumentType||'';
-        document.getElementById('z_schedule').innerText=r.scheduleOfProperty||'';
-        document.getElementById('z_consideration').innerText=r.consideration||'';
-        document.getElementById('result').style.display='block';
-      } catch(err){ console.error(err); document.getElementById('flashMessage').innerText='❌ Error fetching.'; document.getElementById('flashMessage').style.display='block'; }
+        const recs = await (await fetch('/get-users')).json();
+        const r = recs.find(u => u.metaNotarySrNo === sr && u.metaDocumentNumber === dn);
+        if (!r) {
+          flash.innerText = '❌ Record not found.';
+          flash.style.display = 'block';
+          return;
+        }
+        // Metadata
+        document.getElementById('z_srno').innerText = r.metaNotarySrNo;
+        document.getElementById('z_docno').innerText = r.metaDocumentNumber;
+        document.getElementById('z_docType').innerText = r.metaDocumentType;
+        // Party formatter
+        function fillParty(prefix) {
+          const labels = ['Name','Age','Occupation','Residing At','Contact No.','Identification'];
+          const keys = prefix === 'purchaser'
+            ? ['purchaserName','purchaserAge','purchaserOccupation','purchaserAddress','purchaserContact','purchaserIdNumber']
+            : prefix === 'seller'
+              ? ['sellerName','sellerAge','sellerOccupation','sellerAddress','sellerContact','sellerIdNumber']
+              : ['witnessName','witnessAge','witnessOccupation','witnessAddress','witnessContact','witnessIdNumber'];
+          return keys.map((k,i) => `<div><strong>${labels[i]}:</strong> ${r[k] || '—'}</div>`).join('');
+        }
+        // Populate parties
+        document.getElementById('z_purchaser').innerHTML = fillParty('purchaser');
+        document.getElementById('z_photoP').src = r.photoP || '';
+        document.getElementById('z_thumbP').src = r.thumbP || '';
+        document.getElementById('z_seller').innerHTML = fillParty('seller');
+        document.getElementById('z_photoS').src = r.photoS || '';
+        document.getElementById('z_thumbS').src = r.thumbS || '';
+        document.getElementById('z_witness').innerHTML = fillParty('witness');
+        document.getElementById('z_photoW').src = r.photoW || '';
+        document.getElementById('z_thumbW').src = r.thumbW || '';
+        // Footer fields
+        document.getElementById('z_contents').innerText = r.metaDocumentType;
+        document.getElementById('z_schedule').innerText = r.scheduleOfProperty;
+        document.getElementById('z_consideration').innerText = r.consideration;
+        result.style.display = 'block';
+      } catch (err) {
+        console.error(err);
+        flash.innerText = '❌ Error fetching record.';
+        flash.style.display = 'block';
+      }
     }
-    function printRecord(){ const orig=document.body.innerHTML; document.body.innerHTML=document.getElementById('result').outerHTML; window.print(); document.body.innerHTML=orig; window.location.reload(); }
+    function printRecord() {
+      const original = document.body.innerHTML;
+      document.body.innerHTML = document.getElementById('result').outerHTML;
+      window.print();
+      document.body.innerHTML = original;
+      window.location.reload();
+    }
   </script>
 </body>
 </html>
