--- a/public/user.html
+++ b/public/user.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>All Sale Deeds - PRTU</title>
-  <!--
-    users.html
-    - Displays all saved sale-deed records in a table
-    - Fields: Document No., Notary Sr. No., Doc Type,
-      Purchaser, Seller, Witness, Schedule, Consideration,
-      Photo (Purchaser) & Thumb (Purchaser)
-    - Edit/Delete actions link back to dashboard.html
-  -->
   <style>
-    body { font-family: Arial, sans-serif; background: #f2f2f2; padding: 20px; margin: 0; }
-    h2 { text-align: center; color: #004080; margin-bottom: 20px; }
-    table { width: 100%; border-collapse: collapse; background: #fff; }
-    th, td { padding: 8px; border: 1px solid #ccc; font-size: 14px; vertical-align: top; }
-    th { background: #004080; color: #fff; }
-    img.thumb { width: 60px; height: auto; border-radius: 4px; }
-    .actions button { padding: 6px 10px; margin: 2px; font-size: 12px; border: none; border-radius: 4px; cursor: pointer; }
-    .edit-btn { background: #28a745; color: #fff; }
-    .delete-btn { background: #dc3545; color: #fff; }
-    .no-records { text-align: center; font-style: italic; padding: 20px; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      padding: 20px;
+      margin: 0;
+    }
+    h2 {
+      text-align: center;
+      color: #004080;
+      margin-bottom: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: #fff;
+    }
+    th,
+    td {
+      padding: 8px;
+      border: 1px solid #ccc;
+      font-size: 14px;
+      vertical-align: top;
+    }
+    th {
+      background: #004080;
+      color: #fff;
+    }
+    img.thumb {
+      width: 60px;
+      height: auto;
+      border-radius: 4px;
+    }
+    .actions button {
+      padding: 6px 10px;
+      margin: 2px;
+      font-size: 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .actions .edit-btn { background: #28a745; color: #fff; }
+    .actions .delete-btn { background: #dc3545; color: #fff; }
+    .no-records {
+      text-align: center;
+      font-style: italic;
+      padding: 20px;
+    }
   </style>
 </head>
 <body>
@@ -30,13 +59,13 @@
   <table id="recordsTable">
     <thead>
       <tr>
-        <th>Doc No.</th>
+        <th>Document No.</th>
         <th>Notary Sr. No.</th>
-        <th>Doc Type</th>
+        <th>Document Type</th>
         <th>Purchaser</th>
         <th>Seller</th>
         <th>Witness</th>
-        <th>Schedule</th>
+        <th>Schedule of Property</th>
         <th>Consideration</th>
         <th>Photo (P)</th>
         <th>Thumb (P)</th>
@@ -47,60 +76,62 @@
   </table>
 
   <script>
-    // Load and render all saved records
+    // Fetch and render all saved sale deeds
     async function loadRecords() {
       const tbody = document.querySelector('#recordsTable tbody');
       tbody.innerHTML = '';
       try {
-        const res = await fetch('/get-users');
-        const records = await res.json();
+        const response = await fetch('/get-users');
+        const records = await response.json();
         if (!records.length) {
           tbody.innerHTML = '<tr><td colspan="11" class="no-records">No records found.</td></tr>';
           return;
         }
-        records.forEach(r => {
+        for (const r of records) {
           const tr = document.createElement('tr');
           tr.innerHTML = `
-            <td>\${r.metaDocumentNumber || '—'}</td>
-            <td>\${r.metaNotarySrNo || '—'}</td>
-            <td>\${r.metaDocumentType || '—'}</td>
-            <td>\${r.purchaserName || '—'}</td>
-            <td>\${r.sellerName || '—'}</td>
-            <td>\${r.witnessName || '—'}</td>
-            <td>\${r.scheduleOfProperty || '—'}</td>
-            <td>\${r.consideration || '—'}</td>
-            <td>\${r.photoP ? `<img src="\${r.photoP}" class="thumb" alt="Photo">` : '—'}</td>
-            <td>\${r.thumbP ? `<img src="\${r.thumbP}" class="thumb" alt="Thumb">` : '—'}</td>
+            <td>${r.metaDocumentNumber || '—'}</td>
+            <td>${r.metaNotarySrNo      || '—'}</td>
+            <td>${r.metaDocumentType    || '—'}</td>
+            <td>${r.purchaserName       || '—'}</td>
+            <td>${r.sellerName          || '—'}</td>
+            <td>${r.witnessName         || '—'}</td>
+            <td>${r.scheduleOfProperty  || '—'}</td>
+            <td>${r.consideration       || '—'}</td>
+            <td>${r.photoP   ? `<img src="${r.photoP}" class="thumb" alt="Photo">` : '—'}</td>
+            <td>${r.thumbP   ? `<img src="${r.thumbP}" class="thumb" alt="Thumb">` : '—'}</td>
             <td class="actions">
-              <button class="edit-btn" onclick="editRecord(\${r.id})">Edit</button>
-              <button class="delete-btn" onclick="deleteRecord(\${r.id})">Delete</button>
+              <button class="edit-btn" onclick="editRecord(${r.id})">Edit</button>
+              <button class="delete-btn" onclick="deleteRecord(${r.id})">Delete</button>
             </td>
           `;
           tbody.appendChild(tr);
-        });
-      } catch (e) {
-        console.error(e);
-        tbody.innerHTML = '<tr><td colspan="11" class="no-records">Error loading records</td></tr>';
+        }
+      } catch (error) {
+        console.error('Error loading records:', error);
+        tbody.innerHTML = '<tr><td colspan="11" class="no-records">Error loading records.</td></tr>';
       }
     }
 
+    // Navigate to dashboard for editing
     function editRecord(id) {
-      // redirect to dashboard with edit param
       window.location.href = `dashboard.html?edit=${id}`;
     }
 
+    // Delete a record and refresh the list
     async function deleteRecord(id) {
-      if (!confirm('Delete this record?')) return;
+      if (!confirm('Are you sure you want to delete this record?')) return;
       try {
         const res = await fetch('/delete-user', {
           method: 'POST',
-          headers: {'Content-Type':'application/json'},
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ id })
         });
         const data = await res.json();
         alert(data.message);
         loadRecords();
-      } catch {
+      } catch (err) {
+        console.error('Deletion failed:', err);
         alert('Deletion failed');
       }
     }
